--- a/configuration.org
+++ b/configuration.org
@@ -73,7 +73,7 @@ Theres an ~init.example.el~ in ~~/.emacs.d~.
        ;;(emoji +unicode)  ; 🙂
        hl-todo           ; highlight TODO/FIXME/NOTE/DEPRECATED/HACK/REVIEW
        ;;hydra
-       ;;indent-guides     ; highlighted indent columns
+       indent-guides     ; highlighted indent columns
        ;;ligatures         ; ligatures and symbols to make your code pretty again
        ;;minimap           ; show a map of the code on the side
        modeline          ; snazzy, Atom-inspired modeline, plus API
@@ -152,7 +152,7 @@ Theres an ~init.example.el~ in ~~/.emacs.d~.
        :lang
        ;;agda              ; types of types of types of types...
        ;;beancount         ; mind the GAAP
-       ;;(cc +lsp)         ; C > C++ == 1
+       (cc)    (cc +lsp)   ; C > C++ == 1
        ;;clojure           ; java with a lisp
        ;;common-lisp       ; if you've seen one lisp, you've seen them all
        ;;coq               ; proofs-as-programs
@@ -189,18 +189,18 @@ Theres an ~init.example.el~ in ~~/.emacs.d~.
        ;;nim               ; python + lisp at the speed of c
        ;;nix               ; I hereby declare "nix geht mehr!"
        ;;ocaml             ; an objective camel
-       org               ; organize your plain life in plain text
+       (org +roam2 +emacsql)        ; organize your plain life in plain text
        ;;php               ; perl's insecure younger brother
        ;;plantuml          ; diagrams for confusing people more
        ;;purescript        ; javascript, but functional
-       (python +pyenv +lsp)  ; maybe add +pyright if other lsps dont work
-       ;;qt                ; the 'cutest' gui framework ever
+       (python +lsp +pyright)  ; maybe add +pyright if other lsps dont work
+       qt                ; the 'cutest' gui framework ever
        ;;racket            ; a DSL for DSLs
        ;;raku              ; the artist formerly known as perl6
        ;;rest              ; Emacs as a REST client
        ;;rst               ; ReST in peace
        ;;(ruby +rails)     ; 1.step {|i| p "Ruby is #{i.even? ? 'love' : 'life'}"}
-       ;;rust              ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
+       rust              ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
        ;;scala             ; java, but good
        ;;(scheme +guile)   ; a fully conniving family of lisps
        sh                ; she sells {ba,z,fi}sh shells on the C xor
@@ -279,12 +279,25 @@ Theres an ~init.example.el~ in ~~/.emacs.d~.
 ;; If you use `org' and don't want your org files in the default location below,
 ;; change `org-directory'. It must be set before org loads!
 (setq org-directory "~/org/")
+(after! org
+  (setq org-roam-directory "~/org/roam/")
+  (setq org-roam-index-file "~/org/roam/index.org")
+  (org-roam-db-autosync-mode))
 
 (after! magit
   (setq magit-diff-hide-trailing-cr-characters t))
 
 (after! auth-source
   (setq auth-sources '("~/.authinfo")))
+
+(use-package! mfgpt
+    :load-path "~/mfgpt")
+
+(global-set-key [remap evil-quit] 'kill-buffer)
+
+(defun my-black-buffer ()
+  (interactive)
+  (call-process-shell-command (concat "black" " " (buffer-file-name))))
 
 ;; Whenever you reconfigure a package, make sure to wrap your config in an
 ;; `after!' block, otherwise Doom's defaults may override your settings. E.g.
@@ -335,7 +348,6 @@ Theres an ~init.example.el~ in ~~/.emacs.d~.
 
 ;; To install SOME-PACKAGE from MELPA, ELPA or emacsmirror:
 ;(package! some-package)
-
 ;; To install a package directly from a remote git repo, you must specify a
 ;; `:recipe'. You'll find documentation on what `:recipe' accepts here:
 ;; https://github.com/raxod502/straight.el#the-recipe-format
